welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: value || is not a member of Int
else if ((a>=10 && a<=20) || (b>=10 && b<=20)) {return Math.min(10-a,10-b) || Math.min(20-a,20-b)}
                                                                           ^